Oppgrader til spring-boot 3.3.1 (#300)
* WIP: Spring boot 3.3.1

* Bytt annotasjon på wiremock

* Konfigurer wiremock port med dynamicPropertySource

* Fiks asserts på wiremock

* Kafka fixes:Add bean qualifiers, set primary on test bean, fix seek to end method

* Bump til java 21 i pipeline

* Bruk dockerfile fra veilarbaktivitet (distroless)

* HACK

* Use maven path to jar not gradle

* Bruk ENTRYPOINT istedetfor CMD

* Fix cache in sonarcloud pipeline

* Add dependency for flyway-oracle

* Bump springdoc

* Remove pinned jacoco-version

---------

Co-authored-by: johannetronstad <johanne.tronstad@nav.no>