@@ -5,17 +5,17 @@ import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.springframework.boot.autoconfigure.kafka.KafkaProperties;
+import org.springframework.boot.ssl.DefaultSslBundleRegistry;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 import org.springframework.kafka.core.*;
 import org.springframework.kafka.support.serializer.JsonDeserializer;
 import org.springframework.kafka.test.EmbeddedKafkaBroker;
-import org.springframework.kafka.test.core.BrokerAddress;
+import org.springframework.kafka.test.utils.KafkaTestUtils;
 
 import java.util.Arrays;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Configuration
 public class KafkaAivenTestConfig {
@@ -24,7 +24,7 @@ public class KafkaAivenTestConfig {
     @Bean
     @Primary
     KafkaProperties kafkaProperties(KafkaProperties kafkaProperties, EmbeddedKafkaBroker embeddedKafkaBroker) {
-        kafkaProperties.setBootstrapServers(Arrays.stream(embeddedKafkaBroker.getBrokerAddresses()).map(BrokerAddress::toString).collect(Collectors.toList()));
+        kafkaProperties.setBootstrapServers(Arrays.stream(embeddedKafkaBroker.getBrokersAsString().split(",")).toList());
         return kafkaProperties;
     }
 
@@ -35,8 +35,8 @@ public class KafkaAivenTestConfig {
     }
 
     @Bean
-    ProducerFactory<String,String> stringStringProducerFactory(KafkaProperties kafkaProperties) {
-        Map<String, Object> producerProperties = kafkaProperties.buildProducerProperties();
+    ProducerFactory<String,String> stringStringProducerFactory(KafkaProperties kafkaProperties, EmbeddedKafkaBroker embeddedKafkaBroker) {
+        Map<String, Object> producerProperties = KafkaTestUtils.producerProps(embeddedKafkaBroker);
         producerProperties.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, kafkaProperties.getBootstrapServers());
         producerProperties.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, org.apache.kafka.common.serialization.StringSerializer.class);
         producerProperties.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, org.apache.kafka.common.serialization.StringSerializer.class);
@@ -46,9 +46,10 @@ public class KafkaAivenTestConfig {
 
 
     // ******* Lese fra brukernotifikasjons topics i test START ***********
-    @Bean
+    @Bean("avroAvroConsumerFactory")
+    @Primary
     <K extends SpecificRecordBase, V extends SpecificRecordBase> ConsumerFactory<K, V> avroAvroConsumerFactory(KafkaProperties kafkaProperties, EmbeddedKafkaBroker embeddedKafka) {
-        Map<String, Object> consumerProperties = kafkaProperties.buildConsumerProperties();
+        Map<String, Object> consumerProperties = kafkaProperties.buildConsumerProperties(new DefaultSslBundleRegistry());
         consumerProperties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, embeddedKafka.getBrokersAsString());
         consumerProperties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, io.confluent.kafka.serializers.KafkaAvroDeserializer.class);
         consumerProperties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, io.confluent.kafka.serializers.KafkaAvroDeserializer.class);
@@ -59,7 +60,7 @@ public class KafkaAivenTestConfig {
 
     @Bean
     public Admin kafkaAdminClient(KafkaProperties properties, EmbeddedKafkaBroker embeddedKafkaBroker) {
-        Map<String, Object> config = properties.buildAdminProperties();
+        Map<String, Object> config = properties.buildAdminProperties(new DefaultSslBundleRegistry());
         config.put("bootstrap.servers", embeddedKafkaBroker.getBrokersAsString());
         return Admin.create(config);
     }
